# jamaat

./: README.md  pyproject.toml
jamaat/: api.py  hooks.py  modules.txt
jamaat/jamaat/report/miqaat_attendance_details/: miqaat_attendance_details.js  miqaat_attendance_details.json  miqaat_attendance_details.py
